--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Hello, world!</title>
+    <title>URL Shortener | myshort.codes</title>
   </head>
   <body>
     <header>
