style: Add little UI changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <section class="col-md-8 offset-md-2 result-section">
             <p>Copy your shortened URL</p>
-            <p>http://myshort.codes/xH38adf29/</p>
+            <p class="text-primary"><strong>http://myshort.codes/xH38adf29/</strong></p>
         </section>
     </main>
 
